na2s gui testing